--- a/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
@@ -80,7 +80,7 @@
                                                 <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Name)</td>
                                                 <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
                                                 <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
-                                                <td style="text-align:right"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)</strong></td>
+                                                <td style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
                                                 <td style="text-align:center">
                                                     <button type="button" class="btn btn-success btn-sm  modal-link"
                                                             data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
