--- a/CSManagement/CSManagement/Views/Generations/Registers.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Registers.cshtml
@@ -1,71 +1,126 @@
 ﻿@model CSManagement.Models.Register_SC
 
 @{
-    ViewBag.Title = "Registers";
+    ViewBag.Title = "ใบสมัครอบรม";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    int i = 1;
 }
 
-<h2>Registers</h2>
+<head>
+    <style>
+        .outer {
+            padding: 1em 1em;
+            box-shadow: 5px 5px 5px #d9d9d9;
+        }
+        .content {
+            min-height: 250px;
+            padding: 0px;
+            margin-right: auto;
+            margin-left: auto;
+            padding-left: 5px;
+            padding-right: 0px;
+        }
+
+    </style>
+</head>
 
 @using (Html.BeginForm("Create", "Register_SC", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
+<section class="content">
+    @*///ใบสมัครคอร์ส///*@
+    <div class="box box-default col-md-8" style="margin-left:10px;width:65%">
+        <div class="box-header with-border">
+            <span style="font-size:25px;text-align:center">ใบสมัครคอร์ส @ViewBag.Gen_SCID</span>
 
-    <div class="form-horizontal">
-        <h4>Register_SC</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button>
+            </div>
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body" style="font-size:15px">
+            <div class="row">
+                <div class="form-group col-md-6">
+                    @Html.LabelFor(model => model.REG_IDCard, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.REG_IDCard, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.REG_IDCard, "", new { @class = "text-danger" })
+                </div>
 
-        <span style="font-size: larger">ใบสมัครคอร์ส @ViewBag.Gen_SCID</span>
+                <div class="form-group col-md-6">
+                    @Html.LabelFor(model => model.REG_Name, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.REG_Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.REG_Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.REG_IDCard, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.REG_IDCard, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.REG_IDCard, "", new { @class = "text-danger" })
+            <div class="row">
+                <div class="form-group col-md-12">
+                    @Html.LabelFor(model => model.REG_Address, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.REG_Address, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.REG_Address, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-md-6">
+                    @Html.LabelFor(model => model.REG_Tel, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.REG_Tel, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.REG_Tel, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group col-md-6">
+                    @Html.LabelFor(model => model.REG_Email, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.REG_Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.REG_Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <br />
+
+            <div class="text-center">
+                <a class="btn btn-default col-md-3" style="float:left;font-size:18px" href="@Url.Action("IndexUser", "Generations")"><i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
+                <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-plus"></i> สมัครอบรม</button>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.REG_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.REG_Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.REG_Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.REG_Address, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.REG_Address, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.REG_Address, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.REG_Tel, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.REG_Tel, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.REG_Tel, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.REG_Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.REG_Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.REG_Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+        <div class="box-footer">
+            หมายเหตุ : กรุณาตรวจสอบข้อมูลให้ถูกต้องก่อนทำการกดบันทึก
         </div>
     </div>
+
+    @*///รายชื่อผู้สมัคร///*@
+    <div class="box box-default col-md-4" style="margin-left:10px;width:30%">
+        <div class="box-header with-border">
+            <span style="font-size:25px;text-align:center">รายชื่อผู้สมัคร</span>
+
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button>
+            </div>
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body" style="font-size:15px">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ที่</th>
+                        <th>ชื่อ-นามสกุล</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>@(i++)</td>
+                        <td>ชื่อ-นามสกุล</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</section>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+
 </div>
