--- a/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
@@ -3,40 +3,135 @@
 @{
     ViewBag.Title = "IndexUserGrap";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    int i = 1;
 }
 
-@using (Html.BeginForm("IndexUserGrap", "Home",FormMethod.Post))
+<head>
+    <style>
+        .outer {
+            padding: 1em 1em;
+            box-shadow: 5px 5px 5px #d9d9d9;
+        }
+
+        .headerbar {
+            background: #feac28 !important;
+            color: #ffffff !important;
+            position: relative;
+            margin-bottom: 0.5em;
+            margin-right: -2.5em;
+            margin-left: -2.5em;
+            box-shadow: 5px 5px 5px #d9d9d9;
+        }
+
+            .headerbar:before {
+                content: "";
+                position: absolute;
+                border-bottom: 0.5em solid #333;
+                border-left: 1.1em solid transparent;
+                left: 5px;
+                top: -0.5em;
+            }
+
+            .headerbar:after {
+                content: "";
+                position: absolute;
+                border-top: 0.5em solid #333;
+                border-right: 1.5em solid transparent;
+                right: 5px;
+                bottom: -0.5em;
+            }
+
+            .headerbar:hover {
+                transform: scale(1,1.1);
+            }
+
+        .primary {
+            float: left;
+            width: 100%;
+        }
+
+        .header1 {
+            border-bottom: 2px solid #207016;
+        }
+
+        .page-title {
+            color: #fff;
+            padding: 6px 12px;
+            display: inline-block;
+            font-size: 18px;
+            margin-bottom: 0px;
+            padding-bottom: 15px;
+            background-color: #207016;
+        }
+    </style>
+</head>
+
+
+@using (Html.BeginForm("IndexUserGrap", "Home", FormMethod.Post))
 {
-    <div>
-        <div class="form-group col-md-3">
-            @Html.LabelFor(model => model.Course_Year, htmlAttributes: new { @class = "control-label" })
-            @Html.DropDownList("Year", null, "เลือกปี", htmlAttributes: new { @class = "form-control" })
+<section class="content" style=" background-color: white;height:520px">
+
+    <div class="row">
+        <div class="col-md-8">
+            <header class="header1">
+                <h1 class="page-title">ข้อมูลหลักสูตร</h1>
+            </header>
         </div>
-        <div>
-            <button type="submit" class="btn btn-success col-lg-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> ค้นหาตามปี</button>
+        <div class="col-md-4">
+            <button type="submit" class="btn btn-success" style="float:right"><i class="fa fa-search"></i> ค้นหาตามปี</button>
+            <div class="col-md-3" style=" float: right;width:70%">
+                @Html.DropDownList("Year", null, "เลือกปี", htmlAttributes: new { @class = "form-control" })
+            </div>
         </div>
     </div>
-}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="panel panel-default outer" style="width:95%">
-                <div class="panel-heading headerbar">
-                    สัดส่วนหมวดวิชาหลักสูตรสาขา
+    <div class="primary">
+        <div class="row">
+            @*///ตารางแสดงหลักสูตร///*@
+            <div class="col-md-8">
+                <div class="panel panel-default outer">
+                    <div class="panel-body text-justify">
+                        <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                            <thead>
+                                <tr>
+                                    <th style="text-align:center">ที่</th>
+                                    <th style="text-align:center">หมวดวิชา</th>
+                                    <th style="text-align:center">จำนวนหน่วยกิต</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td style="text-align:center">@(i++)</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
                 </div>
-                <div class="panel-body text-justify chart-responsive">
-                    <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
+            </div>
+
+            @*///กราฟแสดงหลักสูตร///*@
+            <div class="col-md-4" style="float:right;padding-right:40px">
+                <div class="panel panel-default outer">
+                    <div class="panel-heading headerbar">
+                        <label style="font-size:20px">สัดส่วนหมวดวิชาหลักสูตรสาขา</label>
+                    </div>
+                    <div class="panel-body text-justify chart-responsive">
+                        <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
+</section>
+}
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 <script type="text/javascript">
-
     window.onload = function () {
         var chart =
             new CanvasJS.Chart("chartContainer", {
@@ -51,9 +146,22 @@
                         indexLabel: "{label} {y}%",
                         dataPoints: @Html.Raw(ViewBag.DataPoints)
                     }
-        ]
+                ]
             });
         chart.render();
     };
-
+        $(document).ready(function () {
+            $('#example1').DataTable({
+                scrollCollapse: true,
+                autoWidth: false,
+                responsive: true,
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                },
+                columnDefs: [{
+                    targets: "datatable-nosort",
+                    orderable: false
+                }]
+            });
+        });
 </script>
