--- a/CSManagement/CSManagement/Views/Syllabus/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Syllabus/Details.cshtml
@@ -4,40 +4,39 @@
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">รายละเอียดข้อมูลประชาสัมพันธ์</h1>
 
-<h2>Details</h2>
+                    <div style="float:right">
+                        <a class="btn btn-default" href="@Url.Action("Index", "Syllabus")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
+                        <a class="btn btn-warning" href="@Url.Action("Edit", "Syllabus")/@Model.Sy_ID"><i class="fa fa-edit"></i> แก้ไขข้อมูล</a>
+                        <a class="btn btn-danger" href="@Url.Action("Delete", "Syllabus")"><i class="fa fa-trash-o"></i> ลบข้อมูล</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<div>
-    <h4>Syllabu</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Sy_Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Sy_Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Sy_Details)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Sy_Details)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Sy_Img)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Sy_Img)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Sy_ID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+        <div class="box-body">
+            <table id="w0" class="table table-striped table-bordered detail-view" style="font-size:18px">
+                <tbody>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Sy_Name)</th>
+                        <td>@Html.DisplayFor(model => model.Sy_Name)</td>
+                    </tr>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Sy_Details)</th>
+                        <td>@Html.DisplayFor(model => model.Sy_Details)</td>
+                    </tr>
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.Sy_Img)</th>
+                        <td>@Html.DisplayFor(model => model.Sy_Img)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
