--- a/CSManagement/CSManagement/Views/Teachers/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/IndexUser.cshtml
@@ -47,40 +47,25 @@
 
 <body>
     <section class="content">
+        <div class="panel panel-default outer" style="width:100%">
+            <div class="panel-heading headerbar" style="text-align:center;font-size:20px">
+                อาจารย์ประจำหลักสูตรสาขาวิทยาการคอมพิวเตอร์
+            </div>
             <div class="row">
-                <div class="col-md-12">
-                    <div class="panel panel-default outer" style="width:100%">
-                        <div class="panel-heading headerbar" style="text-align:center;font-size:20px">
-                            บุคคลากรสาขาวิทยาการคอมพิวเตอร์
-                        </div>
-                        <div class="panel-body text-justify">
-                            <table id="example1" class="table table-bordered table-striped" style="width:100%">
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <th style="text-align:center">ชื่อ-นามสกุล</th>
-                                            <td>@item.Title.Title_Name @item.Tea_Name @item.Tea_Surname</td>
-                                        </tr>
-                                        <tr>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Export)</th>
-                                            <td>@Html.DisplayFor(modelItem => item.Tea_Export)</td>
-                                        </tr>
-                                        <tr>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Position)</th>
-                                            <td>@Html.DisplayFor(modelItem => item.Tea_Position)</td>
-                                        </tr>
-                                        <tr>
-                                            <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Img)</th>
-                                            <td class="text-center" style="padding:10px 10px 10px 10px"><img src="~/img/@item.Tea_Img" height="70" width="70" alt="Alternate Text" /></td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
+                @foreach (var item in Model)
+                {
+                    <div class="col-md-4">
+                        <div class="panel panel-default outer" style="height: 300px;margin-top:20px">
+                            <div class="panel-body text-center">
+                                <img src="~/img/@item.Tea_Img" style="height:200px;width:250px" /><br />
+                                <label style="text-align:center">@item.Title.Title_Name @item.Tea_Name @item.Tea_Surname</label><br />
+                                <label style="text-align:center">@Html.DisplayFor(modelItem => item.Tea_Position)</label><br />
+                            </div>
                         </div>
                     </div>
-                </div>
+                }
             </div>
+        </div>
     </section>
 </body>
 
